Construction hook in plugins, implement early transformer hook, URL->URI where appropriate